@@ -292,6 +292,7 @@
    <li>IntegerFastAlgo</li>
    <li>IntegerOctetBuilder</li>
    <li>SmallPrimes</li>
+   <li>ModEngine</li>
    <li>NoPrimeTest</li>
   </ol>
  </li>
